Publicando site no GitHub

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background-image: url('/img/WhatsApp\ Image\ 2025-03-23\ at\ 12.40.47.jpeg');
+  background-image: url('/img/mundo.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
